--- a/login.css
+++ b/login.css
@@ -2,25 +2,41 @@ body {
     margin: 0 auto;
     font-family: Arial, sans-serif;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to bottom right, #129383 50%, #7587cd 50%);
+    background-image: url("./images/backgroundLogin.jpg");
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;
+    overflow: hidden;
+    font: ;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 main {
-    width: 50vw;
-    height: 40vh;
-    background-color: white;
-    padding: 25px;
+    width: 30vw;
+    height: 100%;
+    background-color: rgb(255, 255, 255,0.9);
     border: 1px solid #ddd;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     display: flex;
-    flex-direction: row;
+    position: absolute;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 50px;
+    justify-content: flex-start;
+}
+
+
+main img{
+    width: 55%;
+    margin: 10% 10%;
 }
 
 .material-symbols-outlined{
@@ -28,13 +44,13 @@ main {
     padding: 4px;
 }
 
-form{
-    align-items: center;
-    width: 30%;
+.loginFields {
+    width: 80%;
+    margin-bottom: 20px;
 }
 
-.loginFields {
-    width: 30%;
+.registerLink{
+    font-size: small;
 }
 
 input, button {
@@ -42,8 +58,13 @@ input, button {
     padding: 10px;
     margin-bottom: 10px;
     box-sizing: border-box;
-    border: 1px solid #ddd;
+    border: none;
+    border-bottom: 1px solid #ddd;
+    background-color: transparent;
     border-radius: 5px;
+    font-size: 16px; 
+    font-family: Arial, sans-serif; 
+    color: #333; 
 }
 
 button{
@@ -57,10 +78,17 @@ button:hover{
     background-color: #245276;
 }
 
-.registerLink{
-    width: 20%;
-}
-
 input:focus{
     box-shadow: 0 0 10px gray;
+}
+
+@media screen and (max-width: 970px) {
+    main{
+        width: 100%;
+        justify-content: center;
+    }
+
+    main img{
+        margin: 0;
+    }
 }
