--- a/cadastro.css
+++ b/cadastro.css
@@ -2,33 +2,60 @@ body {
     font-family: Arial, sans-serif;
     margin: 0 auto;
     padding: 0;
-    background-color: #f3f3f3;
+    background-image: url(./images/backCadastro.jpg);
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
-.container {
-    max-width: 600px;
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #12938390;
+}
+
+main {
+    position: absolute;
+    width: 20%;
     margin: auto;
     background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+div img{
+    width: 10vw;
+}
+
 h1 {
     text-align: center;
     margin-bottom: 20px;
 }
+
 label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
 }
+
 input[type="text"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+    border-radius: 10px;
+    border: 1px solid gray;
     box-sizing: border-box;
 }
+
 input[type="submit"] {
     background-color: #129383;
     color: #fff;
@@ -37,6 +64,8 @@ input[type="submit"] {
     border-radius: 5px;
     cursor: pointer;
 }
+
 input[type="submit"]:hover {
     background-color: #0b6c5e;
 }
+
