--- a/home/galeria_style.css
+++ b/home/galeria_style.css
@@ -1,85 +1,78 @@
-header {
-    background-color: #b9efe0;
-    color: #05c99e ;
-    text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
+body{
+    margin: 0 auto;
+    background-color: rgba(220,220,220,0.2);
 }
 
-.container{
+html, body{
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background: #245276;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #129383;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #7587cd;
+}
+
+header {
+    background-color: #245276;
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
     width: 100%;
+    padding: 15px 0px;
+}
+
+header img{
+    width: 10vw;
+    height: auto;
 }
 
 nav {
     text-align: center;
-    padding: 1px 0px;
-    background-color: #05c99e ;
+    padding: 10px;
+    background-color: #245276;
+    font-weight: bold;
+    font-family: 'League Spartan', sans-serif;
+    position: sticky;
     top: 0;
-    width: 100%;
-    align-items: center;
 }
 
 a {
-    padding: 5px 30px;
-    font-size: medium;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    margin: 0 30px; 
 }
 
-a:link {
-    color:  white;
+a:link,
+a:visited {
+    color: white;
     text-decoration: none;
 }
 
-a:visited {
-    color:  white;
-}
-
 a.active {
-    border-radius: 10px;
-    color: #05c99e ;
-    background: #b9efe0;
-}
-.active:hover {
-    border-radius: 10px;
-    color: #05c99e ;
-    background: #b9efe0;
-    border-radius: 10px 10px 0px 0px;
-}
-.galerias a:hover {
-
-    border-radius: 10px 10px 0 0;
-    background: none;
-    color: none;
+    border-radius: 5px;
+    color: black;
+    background: #129383;
 }
 
-nav ul li a:hover {
-
-    border-radius: 10px 10px 10px 10px;
-    color: #05c99e ;
-    background: #b9efe0;
-}
-
-body {
-    background-color: #f1ebeb;
-    margin: 0 auto;
-
+a:hover {
+    border-radius: 5px;
+    color: black;
+    background: #129383;
 }
 
 main {
-    background-color: white;
-    width: 75vw;
-    padding: 10px 30px;
-    margin: 0 auto;
-    border-radius: px;
-    flex: 1;
-
-}
-
-@media (max-width: 600px) {
-    main {
-        width: 80%;
-    }
+    display: flex;
+    flex-grow: 1;
 }
 
 footer {
@@ -91,10 +84,21 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: space-around;
+    align-content: center;
 }
-.container2:hover .overlay {
-  opacity: 1;
+
+@media (max-width: 1024px) {
+    .galeria {
+        flex-direction: column;
+        width: 100%;
+    }
+    .container{
+        min-width: 80%;
+    }
+}
+
+.container:hover .overlay {
+  opacity: 0.7;
 }
 
 .image {
@@ -105,7 +109,7 @@ footer {
 }
 
 .text {
-  color: #05c99e ;
+  color: black ;
   font-size: 20px;
   position: absolute;
   top: 50%;
@@ -127,20 +131,15 @@ footer {
   width: 100%;
   opacity: 0;
   transition: .3s ease;
-  background-color: #b9efe0;
+  background-color: #129383;
 }
 
-.container2 {
+.container {
     position: relative;
     width: 40%;
     margin: 10px;
 }
-.menu {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+
 .menu li {
     margin-left: 10px;
     list-style: none;
