--- a/login.css
+++ b/login.css
@@ -95,6 +95,11 @@ footer{
     justify-content: center;
 }
 
+a{
+    display: block;
+    margin: 1rem;
+}
+
 @media screen and (max-width: 970px) {
 
 }
