Login - Responsive Changes

--- a/css/login_style.css
+++ b/css/login_style.css
@@ -29,7 +29,6 @@ form {
     position: absolute;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
 }
 
 
@@ -37,6 +36,16 @@ form img{
     margin: 0 auto;
     width: 55%;
     margin: 10% 10%;
+}
+
+@media (max-width:900px) {
+    form{
+        width: 100%;
+        justify-content: center;
+    }
+    form img{
+        width: 30%;
+    }
 }
 
 .material-symbols-outlined{
@@ -51,6 +60,7 @@ form img{
 
 form p {
     font-size: 14px;
+    text-align: center;
 }
 
 input, button {
