--- a/css/galeria_style.css
+++ b/css/galeria_style.css
@@ -4,16 +4,7 @@ body{
     margin: 0 auto;
     background-color: white;
     box-sizing: border-box;
-}
-
-main {
-    display: flex;
-    flex-grow: 1;
-}
-
-footer {
-    text-align: center;
-    padding: 10px 40px 10px;
+    font-family: "League Spartan", sans-serif;
 }
 .galeria{
     display: flex;
@@ -23,41 +14,36 @@ footer {
     align-content: center;
 }
 
-
-.container:hover .overlay {
-  opacity: 0.7;
+.galeria_text{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
+.galeria_text h1{
+    display: flex;
+    font-size: 2em;
+    width: 50%;
+    background-color: #129383;
+    border-radius: 10px;
+    padding: 10px;
+    justify-content: center;
+    color: black;
 }
 
-.overlay_text {
-  color: black ;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  padding: 60px;
+a{
+    text-decoration: none;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border-radius: 10px;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .3s ease;
-  background-color: #129383;
+main{
+    text-align: center;
+}
+
+main p{
+    font-size: 20px;
+    width: 60%;
+    margin: 0 auto;
 }
 
 .container {
@@ -70,9 +56,20 @@ footer {
     justify-content: center;
 }
 
-.container p{
-    text-align: justify;
-    text-indent: 2rem;
+.container:hover .overlay {
+    opacity: 0.7;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.5s ease;
+}
+
+.container:hover .image {
+    transform: scale(0.93);
 }
 
 @media (max-width: 1024px) {
@@ -83,4 +80,12 @@ footer {
     .container{
         min-width: 80%;
     }
+    main p{
+        width: 100%;
+    }
+}
+
+footer {
+    text-align: center;
+    padding: 10px 40px 10px;
 }
