--- a/css/login_style.css
+++ b/css/login_style.css
@@ -2,6 +2,7 @@ body {
     margin: 0 auto;
     font-family: Arial, sans-serif;
     height: 100vh;
+    width: 100%;
     background-image: url("../images/login/backgroundLogin.jpg");
     background-size: cover; 
     background-position: center; 
