--- a/css/novoEnd_style.css
+++ b/css/novoEnd_style.css
@@ -60,3 +60,17 @@ input[type="submit"]:hover {
     background-color: #0b6c5e;
 }
 
+footer {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+}
+
+footer p{
+    font-size: medium;
+    text-align: center;
+}
