--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -1,6 +1,77 @@
-body{
-    margin: 0 auto;
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
+
+body {
+    background-color: #f8f8f8;
     box-sizing: border-box;
+    margin: 0 auto;
+}
+
+main {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 90%;
+}
+
+.agendamento-container{
+    width: 50%;
+    margin-top: 50px;
+}
+
+@media (max-width: 900px) {
+    .agendamento-container{
+        width: 80%;
+    }
+}
+
+h1,h2,p,legend{
+    font-family: "League Spartan", sans-serif;
+
+}
+
+h1{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+form {
+    margin-bottom: 30px;
+}
+
+form p {
+    margin-bottom: 10px;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+select {
+    width: 100%;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    margin-top: 5px;
+}
+
+input[type="submit"] {
+    background-color: #245276;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #129383;
 }
 
 footer {
@@ -8,9 +79,12 @@ footer {
     color: #fff;
     display: flex;
     justify-content: center;
+    align-items: center;
     bottom: 0;
-    position: absolute;
+    padding: 20px 0px 10px;
+    position: static; 
     width: 100%;
+    height: 10px;
 }
 
 footer p{
