--- a/css/galeria_style.css
+++ b/css/galeria_style.css
@@ -6,15 +6,19 @@ body{
     box-sizing: border-box;
 }
 
+h1{
+    font-family: "League Spartan", sans-serif;
+    font-style: normal;
+    font-size: 2em;
+}
+
 main {
     display: flex;
     flex-grow: 1;
+    flex-direction: column;
+    text-align: center;
 }
 
-footer {
-    text-align: center;
-    padding: 10px 40px 10px;
-}
 .galeria{
     display: flex;
     flex-direction: row;
@@ -23,8 +27,32 @@ footer {
     align-content: center;
 }
 
-.container:hover .overlay {
-  opacity: 0.7;
+.container {
+    position: relative;
+    width: 40%;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+}
+
+.container:hover{
+    transform: scale(0.9);
+}
+
+.title {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 10px;
+    text-align: center;
+    font-family: 'League Spartan', sans-serif;
+    background-color: black;
+    padding: 5px 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0);
 }
 
 .image {
@@ -32,46 +60,6 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
-}
-
-.overlay_text {
-  color: black ;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  padding: 60px;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border-radius: 10px;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .3s ease;
-  background-color: #129383;
-}
-
-.container {
-    position: relative;
-    width: 40%;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.container p{
-    text-align: justify;
-    text-indent: 2rem;
 }
 
 @media (max-width: 1024px) {
@@ -82,4 +70,23 @@ footer {
     .container{
         min-width: 80%;
     }
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    padding: 10px 0px 10px;
+    position: static; 
+    width: 100%;
+    height: 10px;
+}
+
+footer p{
+    font-size: medium;
+    text-align: center;
+    font-family: "League Spartan", sans-serif;
 }
