--- a/css/home_style.css
+++ b/css/home_style.css
@@ -8,24 +8,19 @@ body{
 
 
 header{
-        background-color: transparent;
-        position: fixed;
-        width: 100%;
+    background-color: transparent;
+    position: fixed;
+    width: 100%;
 }
 
-main h2 {
+main h2, p {
     font-family: "League Spartan", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 800;
-    font-style: normal;
     font-size: 50px;
 }
 
 p{
-    font-family: "League Spartan", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 300;
-    font-style: normal;
     font-size: 20px;
 }
 
