--- a/css/navBar.css
+++ b/css/navBar.css
@@ -77,6 +77,13 @@ nav a:hover {
     display: none;
 }
 
+@media (max-width: 700px) {
+    header img{
+        width: 20vw;
+        height: auto;
+    }
+}
+
 @media (max-width: 1200px) {
     .hamburger-menu {
         display: flex;
@@ -104,7 +111,7 @@ nav a:hover {
         flex-direction: column;
         background-color: #245276;
         position: absolute;
-        top: 100%;
+        top: 99%;
         left: 0;
         width: 100%;
         z-index: 1;
