--- a/css/novoEnd_style.css
+++ b/css/novoEnd_style.css
@@ -1,63 +1,83 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
+
 body {
+    background-color: #f8f8f8;
     box-sizing: border-box;
     margin: 0 auto;
-    padding: 0;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #12938390;
 }
 
 main {
-    position: absolute;
-    width: 20%;
-    margin: auto;
-    background-color: #fff;
     padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 90%;
 }
 
-div img{
-    width: 10vw;
+.cadastroEndereco{
+    width: 50%;
+    margin-top: 50px;
 }
 
-h1 {
+@media (max-width: 900px) {
+    main {
+        align-items: flex-start; 
+    }
+
+    .cadastroEndereco {
+        width: 90%;
+        margin-top: 20px; 
+    }
+}
+
+p,label, input{
+    margin: 10px;
+    font-family: "League Spartan", sans-serif;
+    font-size: 18px;
+}
+
+h1{
+    font-family: "League Spartan", sans-serif;
     text-align: center;
-    margin-bottom: 20px;
+}
+
+form {
+    margin-bottom: 100px;
+}
+
+form  {
+    margin-bottom: 10px;
 }
 
 label {
     display: block;
-    margin-bottom: 5px;
     font-weight: bold;
+    margin-bottom: 5px;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+select {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    border: 1px solid gray;
-    box-sizing: border-box;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    margin-top: 5px;
 }
 
 input[type="submit"] {
-    background-color: #129383;
+    background-color: #245276;
     color: #fff;
-    padding: 10px 20px;
     border: none;
+    padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #0b6c5e;
+    background-color: #129383;
 }
 
 footer {
@@ -65,9 +85,12 @@ footer {
     color: #fff;
     display: flex;
     justify-content: center;
+    align-items: center;
     bottom: 0;
-    position: absolute;
+    padding: 20px 0px 10px;
+    position: static; 
     width: 100%;
+    height: 10px;
 }
 
 footer p{
