--- a/css/home_style.css
+++ b/css/home_style.css
@@ -2,7 +2,7 @@
 
 body{
     margin: 0 auto;
-    background-color: white;
+    background-color: #129383;
     box-sizing: border-box;
 }
 
@@ -10,6 +10,10 @@ body{
 header{
     background-color: transparent;
     position: fixed;
+    width: 100%;
+}
+
+main{
     width: 100%;
 }
 
@@ -83,6 +87,24 @@ footer {
     color: #fff;
     display: flex;
     justify-content: center;
+    align-items: center;
+    bottom: 0;
+    padding: 20px 0px 10px;
+    position: fixed;
+    width: 100%;
+    height: 10px;
+}
+
+footer p{
+    font-size: medium;
+    text-align: center;
+}
+
+/*footer {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
     bottom: 0;
     position: absolute;
     width: 100%;
@@ -91,4 +113,4 @@ footer {
 footer p{
     font-size: medium;
     text-align: center;
-}
+}*/
