--- a/css/novoEnd_style.css
+++ b/css/novoEnd_style.css
@@ -2,18 +2,18 @@
 
 
 body {
-    background-color: #f8f8f8;
+    background-color: #245276;
     box-sizing: border-box;
     margin: 0 auto;
 }
 
 main {
-    padding: 20px;
+    background-color: #f8f8f8;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    width: 90%;
+    width: 100%;
 }
 
 .cadastroEndereco{
